# The-Forge

./: .buckconfig  .clang-format  .gitignore  .gitmodules  BUCK  CMakeLists.txt  README.md  compile_command.bxl  compile_commands.json  defs.bzl  gen_compile_command.ps1  gen_compile_command.sh  rules.bzl
.github/workflows/: build.yml
Common_3/Application/: CameraController.cpp  Config.h  InputSystem.cpp  RemoteControl.cpp  Screenshot.cpp
Common_3/Application/Fonts/: FontSystem.cpp  stbtt.cpp
Common_3/Application/Interfaces/: IApp.h  ICameraController.h  IProfiler.h  IUI.h
Common_3/Application/Profiler/: GpuProfiler.cpp  ProfilerBase.cpp  ProfilerBase.h
Common_3/Application/UI/: UI.cpp
Common_3/Game/Scripting/: LuaSystem.cpp  LunaV.hpp
Common_3/Graphics/: CommonShaderReflection.cpp  GraphicsConfig.cpp  GraphicsConfig.h  PickRenderingAPI.cpp
Common_3/Graphics/Direct3D11/: Direct3D11.cpp  Direct3D11CapBuilder.h  Direct3D11ShaderReflection.cpp
Common_3/Graphics/Direct3D12/: Direct3D12.cpp  Direct3D12CapBuilder.h  Direct3D12Hooks.cpp  Direct3D12Hooks.h  Direct3D12Raytracing.cpp  Direct3D12ShaderReflection.cpp
Common_3/Graphics/Interfaces/: IGraphics.h  IShaderReflection.h
Common_3/Graphics/Metal/: MetalRaytracing.mm  MetalRenderer.mm  MetalShaderReflection.mm
Common_3/Graphics/OpenGLES/: EGLContextCreator.cpp  GLES.cpp  GLESConfig.h  GLESShaderReflection.cpp
Common_3/Graphics/Quest/: VrApiHooks.cpp
Common_3/Graphics/Vulkan/: Vulkan.cpp  VulkanCapsBuilder.h  VulkanRaytracing.cpp
Common_3/OS/: CPUConfig.cpp
Common_3/OS/Android/: AndroidBase.cpp  AndroidFileSystem.cpp  AndroidLog.c  AndroidThread.c
Common_3/OS/Darwin/: CocoaFileSystem.mm  DarwinLog.c  DarwinThread.c  iOSAppDelegate.m  iOSBase.mm  macOSBase.mm  macOSWindow.mm
Common_3/OS/Interfaces/: IOperatingSystem.h
Common_3/OS/Linux/: LinuxBase.cpp  LinuxFileSystem.c  LinuxLog.c  LinuxThread.c  LinuxTime.c  LinuxToolsFileSystem.c  LinuxWindow.cpp
Common_3/OS/Quest/: VrApi.cpp
Common_3/OS/WindowSystem/: WindowSystem.cpp
Common_3/OS/Windows/: WindowsBase.cpp  WindowsFileSystem.cpp  WindowsLog.c  WindowsStackTraceDump.h  WindowsThread.c  WindowsTime.c  WindowsToolsFileSystem.cpp  WindowsWindow.cpp
Common_3/Renderer/Interfaces/: IVisibilityBuffer.h  IVisibilityBuffer2.h
Common_3/Renderer/VisibilityBuffer/: VisibilityBuffer.cpp
Common_3/Renderer/VisibilityBuffer2/: VisibilityBuffer2.cpp
Common_3/Resources/ResourceLoader/: ResourceLoader.cpp  TextureContainers.h
Common_3/Tools/Network/: Network.h
Common_3/Tools/ReloadServer/: ReloadClient.cpp
Common_3/Utilities/: RingBuffer.h
Common_3/Utilities/FileSystem/: FileSystem.c  SystemRun.c
Common_3/Utilities/Interfaces/: ILog.h  IMemory.h  IThread.h  ITime.h
Common_3/Utilities/Log/: Log.c
Common_3/Utilities/Math/: Algorithms.h  BStringHashMap.h
Common_3/Utilities/MemoryTracking/: MemoryTracking.c
Common_3/Utilities/Threading/: ThreadSystem.c
Forge/: BUCK  Config.h  TF_Config.in  TF_FileSystem.h  TF_Log.c  TF_Log.h  TF_String.cpp  TF_String.h  TF_Types.h  defs.bzl
Forge/Common_3/Application/: CameraController.cpp  InputSystem.cpp  RemoteControl.cpp  Screenshot.cpp
Forge/Core/: TF_Core.cpp  TF_Core.h  TF_Logging.h  TF_Math.h  TF_String.cpp  TF_String.h  TF_Thread.h  TF_Types.h
Forge/Formats/: TF_gltf.c  TF_gltf.cpp  TF_gltf.h  TF_ply.c  TF_ply.h
Forge/Graphics/: TF_GPUConfig.cpp  TF_GPUConfig.h  TF_Graphics.cpp  TF_Graphics.h
Forge/Math/: TF_AffineTransform.h  TF_Math.h  TF_Matrix.h  TF_Packed.h  TF_Random.h  TF_Scalar.h  TF_Simd.h  TF_Simd2.h  TF_Simd2x32.h  TF_Simd32x2.h  TF_Simd32x3.h  TF_Simd32x4.h  TF_Simd32x4x4.h  TF_Simd3x32.h  TF_Simd4x32.h  TF_SimdCommon.h  TF_SimdFloat.h  TF_SimdFloat3.h  TF_SimdFloat3x3.h  TF_SimdFloat4.h  TF_SimdFloat4x4.h  TF_SimdMath3.h  TF_SimdMath4.h  TF_SimdQuat32x4.h  TF_Type.h  TF_Types.h  TF_VectorMath.h  common.hpp  vectormath_settings.hpp
Forge/Mem/: TF_Allocators.cpp  TF_Allocators.h  TF_Memory.h
Forge/build_defs/: compile_command.bxl  configure_define.bzl  fsl_library.bzl  package_app.bzl
Forge/stb/: stb_ds.h
Forge/tests/: BUCK  TF_GPUConfigTest.cpp  TF_PlyTest.cpp  TF_ScratchAllocatorTest.cpp  TF_StringTest.cpp  TF_TestMain.h  utest.h
Include/Forge/: Config.h  TF_Config.in
Middleware_3/PaniniProjection/: Panini.cpp
Samples/: .gitignore  .gitmodules  BUCK  CMakeLists.txt  defs.bzl
Samples/01_Transformations/: 01_Transformations.cpp  BUCK
Samples/03_MultiThread/: 03_MultiThread.cpp
Samples/06_MaterialPlayground/: 06_MaterialPlayground.cpp
Samples/09_LightShadowPlayground/: 09_LightShadowPlayground.cpp
Samples/09a_HybridRaytracing/: 09a_HybridRaytracing.cpp
Samples/10_ScreenSpaceReflections/: 10_ScreenSpaceReflections.cpp
Samples/11_LinkedMultiGPU/: 11_MultiGPU.cpp
Samples/11a_UnlinkedMultiGPU/: 11a_UnlinkedMultiGPU.cpp
Samples/12_ZipFileSystem/: 12_ZipFileSystem.cpp
Samples/14_WaveIntrinsics/: 14_WaveIntrinsics.cpp
Samples/15_Transparency/: 15_Transparency.cpp
Samples/15a_VisibilityBufferOIT/: 15a_VisibilityBufferOIT.cpp
Samples/16_Raytracing/: 16_Raytracing.cpp
Samples/17_EntityComponentSystem/: 17_EntityComponentSystem.cpp
Samples/19_CodeHotReload/: 19_CodeHotReload_Main.cpp  IGamePlugin.h
Samples/21_Animations/: 21_Animations.cpp
Samples/28_Skinning/: 28_Skinning.cpp
Samples/34_Input/: 34_Input.cpp
Samples/36_AlgorithmsAndContainers/: 36_AlgorithmsAndContainers.cpp
Samples/Aura/: Aura.cpp  BoundingVolumes.hpp  Shadows.hpp
Samples/Unit_Tests/01_Transformations/: 01_Transformations.cpp  BUCK  CMakeLists.txt
Samples/Visibility_Buffer/: SanMiguel.cpp  SanMiguelSDF.cpp  Visibility_Buffer.cpp
Samples/Visibility_Buffer2/: SanMiguel.cpp  SanMiguel.h  SanMiguelSDF.h  Visibility_Buffer.cpp
Shed/: BUCK  README.md
Shed/nvapi/: nvapi.h  nvapi_lite_common.h
Test/: CMakeLists.txt  TF_GPUConfigTest.cpp  TF_ScratchAllocatorTest.cpp  TF_StringTest.cpp  TF_TestMain.h
cfg/: defs.bzl  fsl.bzl  package.bzl  utils.bzl
cfg/configure_define/: configure_define.bzl
cmake/: utils.cmake
toolchains/: BUCK  compile_command.bxl
(+260 files in other folders)
